<?xml version="1.0"?>
<package format="2">
  <name>serial_communication</name>
  <version>0.0.0</version>
  <description>The serial_communication package</description>
  <maintainer email="scatwheel@todo.todo">scatwheel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>scat_libs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  <export>
  </export>
</package>
